// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie list component should be empty 1`] = `
<div
  className="form-row mt-3"
>
  <ul
    className="col-12 list-group movies-list"
  >
    
  </ul>
</div>
`;

exports[`Movie list component should contain 4 movies 1`] = `
<div
  className="form-row mt-3"
>
  <ul
    className="col-12 list-group movies-list"
  >
    <li
      className="list-group-item list-group-item-action movie"
      onClick={[Function]}
    >
      <strong>
        Minions
      </strong>
      <img
        alt="Minions"
        className="rounded float-right"
        src="https://image.mock.api/small/uX7LXnsC7bZJZjn048UCOwkPXWJ.jpg"
      />
      
    </li>
    <li
      className="list-group-item list-group-item-action movie"
      onClick={[Function]}
    >
      <strong>
        Minions: Competition
      </strong>
      <img
        alt="Minions: Competition"
        className="rounded float-right"
        src="https://image.mock.api/small/rsxhLIqVwMxlas5QoXSHcahPyOa.jpg"
      />
      
    </li>
    <li
      className="list-group-item list-group-item-action movie"
      onClick={[Function]}
    >
      <strong>
        Mower Minions
      </strong>
      <img
        alt="Mower Minions"
        className="rounded float-right"
        src="https://image.mock.api/small/2r2pw6qR9E84t21NHxbYXzoEFpi.jpg"
      />
      
    </li>
    <li
      className="list-group-item list-group-item-action movie"
      onClick={[Function]}
    >
      <strong>
        Minions: Puppy
      </strong>
      <img
        alt="Minions: Puppy"
        className="rounded float-right"
        src="https://image.mock.api/small/eAKzsYVHiC0bSNudVo9IgREurmm.jpg"
      />
      
    </li>
  </ul>
</div>
`;

exports[`Movie list component should display "no results" 1`] = `
<div
  className="form-row mt-3"
>
  <ul
    className="col-12 list-group movies-list"
  >
    <li
      className="list-group-item"
    >
      <strong>
        There are no movies that matched your query.
      </strong>
    </li>
  </ul>
</div>
`;
